# QuadBot

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  chatters.json  config.json  docker-compose.yaml  main.py  pyproject.toml  quadbot.py  requirements.txt  setup.sh
cogs/: qbot_core.py  quadchat.py
scripts/: setup.sh  start.sh  update.sh  utils.sh
src/: main.py  quadbot.py
src/cogs/: quadchat.py  quaddev.py
