[project]
name = "QuadBot"
version = "0.1.0"
description = "A silly little bot for my friend's server"
authors = [
    {name = "Zane", email = "zanehargis@gmail.com"},
]
dependencies = [
    "aiohttp==3.9.0",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "discord-py==2.3.2",
    "frozenlist==1.4.0",
    "idna==3.4",
    "multidict==6.0.4",
    "yarl==1.9.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "CC0-1.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
