[project]
name = "QuadBot"
version = "0.1.0"
description = "A silly little bot for my friend's server"
authors = [
    {name = "Zane", email = "zanehargis@gmail.com"},
]
dependencies = [
    "discord-py>=2.4.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "CC0-1.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
